tests/baselines/reference/circularModuleImports.errors.txt
circularModuleImports.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
circularModuleImports.ts(5,5): error TS2303: Circular definition of import alias 'A'.


==== circularModuleImports.ts (2 errors) ====
    module M
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     
    {
     
        import A = B;
        ~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'A'.
     
        import B = A;
     
    }
    